CloudAlpacas-repo/salesforce/main/default/objects/Admission__c/Admission__c.object-meta.xml
<CustomObject>
    <description>게이트 통과 1건 (팬의 개별 입장 이력)</description>
    <label>Admission</label>
    <nameField>
        <displayFormat>AM-{00000000}</displayFormat>
        <label>Admission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>