CloudAlpacas-repo/salesforce/main/default/objects/Admission__c/fields/Admission_Time__c.field-meta.xml
<CustomField>
    <fullName>Admission_Time__c</fullName>
    <description>입장 시각</description>
    <inlineHelpText>입장 시각</inlineHelpText>
    <label>Admission Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>