CloudAlpacas-repo/salesforce/main/default/objects/Admission__c/fields/Gate__c.field-meta.xml
<CustomField>
    <fullName>Gate__c</fullName>
    <description>입장한 게이트</description>
    <inlineHelpText>입장한 게이트</inlineHelpText>
    <label>Gate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gate 1</fullName>
            </value>
            <value>
                <fullName>Gate 2</fullName>
            </value>
            <value>
                <fullName>Gate 3</fullName>
            </value>
            <value>
                <fullName>Gate 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>