CloudAlpacas-repo/salesforce/main/default/objects/Admission__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>입장 시 사용한 티켓의 주문 상세 레코드를 연결(어떤 티켓으로 입장했는 지)</description>
    <inlineHelpText>입장 시 사용한 티켓의 주문 상세 레코드를 연결(어떤 티켓으로 입장했는 지)</inlineHelpText>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>